// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Components Case: Case Response Line 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;

exports[`Render Components Case: Gen Stats 1`] = `
<div
  className="new-stats"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h2
    className="new-stats-title"
  />
  <h2
    className="new-stats-data"
  >
    %
  </h2>
</div>
`;

exports[`Render Components Case: New Stats 1`] = `
<div
  className="new-stats"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h2
    className="new-stats-title"
  />
  <h2
    className="new-stats-data"
  />
  <h2
    className="new-stats-title"
  >
     from yesterday
  </h2>
</div>
`;

exports[`Render Components Case: Totals 1`] = `
<div
  className="totals"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h2
    className="totals-title"
  />
  <h2
    className="totals-data"
  />
</div>
`;

exports[`Render Components Country: All News 1`] = `null`;

exports[`Render Components Country: General Info 1`] = `
<div
  className="new-stats"
>
  <h2
    className="title"
    style={
      Object {
        "color": "grey",
        "fontSize": "medium",
      }
    }
  />
  <h2
    className="data"
  />
</div>
`;

exports[`Render Components Country: News 1`] = `
<div
  className="news"
>
  <a
    className="title"
  />
  <h2
    className="source"
  >
    (
    )
  </h2>
</div>
`;

exports[`Render Pages About 1`] = `
<div
  className="App"
>
  <h1
    style={
      Object {
        "fontSize": "2em",
        "fontWeight": "800",
        "marginBottom": "20px",
        "marginTop": "20px",
      }
    }
  >
    About
  </h1>
  <div
    style={
      Object {
        "marginTop": "18px",
        "paddingBottom": "18px",
      }
    }
  >
    Our COVID-19 Database site allows users to gather quick statistics on the coronavirus in terms of country, cases, and potential risks. This website is intended for those susceptible to contracting the virus (that means you!), and our aim is to keep users informed about the coronavirus. Integrating disparate data sets allows us to form a broad overview of how countries have handled the COVID-19 pandemic, present some of the unique risks each country's population faces, and possibly indicate the near future trajectory of the pandemic.
  </div>
  <hr />
  <div
    style={
      Object {
        "margin": "18px",
      }
    }
  >
    <h4>
      Project Info
    </h4>
    <br />
    <div
      className="row"
    >
      <div
        className="col-sm-4"
      >
        <div
          className="list-group"
          onKeyDown={[Function]}
          role="tablist"
        >
          <a
            aria-selected={true}
            className="list-group-item list-group-item-action active"
            data-rb-event-key="#tools"
            disabled={false}
            href="#tools"
            onClick={[Function]}
            role="tab"
          >
            Tools
          </a>
          <a
            aria-selected={false}
            className="list-group-item list-group-item-action"
            data-rb-event-key="#data"
            disabled={false}
            href="#data"
            onClick={[Function]}
            role="tab"
            tabIndex={-1}
          >
            Data
          </a>
        </div>
      </div>
      <div
        className="col-sm-8"
      >
        <div
          className="tab-content"
        >
          <div
            aria-hidden={false}
            aria-labelledby={null}
            className="fade tab-pane active show"
            id={null}
            role="tabpanel"
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <ul
              className="list-unstyled"
            >
              <li>
                <a
                  href="https://reactjs.org/"
                >
                  React
                </a>
                 - 
                For creating interactive UIs in JSX.
              </li>
              <li>
                <a
                  href="https://ant.design/"
                >
                  Antd
                </a>
                 - 
                A React UI library for clean composable components.
              </li>
              <li>
                <a
                  href="https://nivo.rocks/"
                >
                  Nivo
                </a>
                 - 
                A React UI library for animated and interactive charts.
              </li>
              <li>
                <a
                  href="https://jestjs.io/"
                >
                  Jest
                </a>
                 - 
                A JavaScript testing framework.
              </li>
              <li>
                <a
                  href="https://github.com/axios/axios"
                >
                  Axios
                </a>
                 - 
                For doing browser-side HTTP requests to our API.
              </li>
              <li>
                <a
                  href="https://flask.palletsprojects.com/en/1.1.x/"
                >
                  Flask
                </a>
                 - 
                For serving our API data in a RESTful way.
              </li>
              <li>
                <a
                  href="https://www.sqlalchemy.org/"
                >
                  SQLAlchemy
                </a>
                 - 
                A Python ORM for creating and interacting with our SQL models.
              </li>
              <li>
                <a
                  href="https://cloud.google.com"
                >
                  GCP
                </a>
                 - 
                For hosting our site on the cloud.
              </li>
              <li>
                <a
                  href="https://www.postman.com"
                >
                  Postman
                </a>
                 - 
                For building and testing API's.
              </li>
              <li>
                <a
                  href="https://gitlab.com/explore"
                >
                  GitLab
                </a>
                 - 
                DevOps tool for issue-tracking, continuous integration, testing, and deployment.
              </li>
              <li>
                <a
                  href="https://www.selenium.dev/"
                >
                  Selenium
                </a>
                 - 
                For end-to-end automated GUI testing.
              </li>
            </ul>
          </div>
          <div
            aria-hidden={true}
            aria-labelledby={null}
            className="fade tab-pane"
            id={null}
            role="tabpanel"
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            For the first phase, we downloaded a few local copies of the data provided from these sources and glued them into the instances using either a script or by copy-paste. The COVID-19 API, RestCountries, and NewsAPI all provided APIs to access their data, but the OWID dataset is only available in file format (
            <code>
              .json
            </code>
             in this case).
            <ul
              className="list-unstyled"
            >
              <li>
                <a
                  href="https://api.covid19api.com/"
                >
                  https://api.covid19api.com/
                </a>
              </li>
              <li>
                <a
                  href="https://restcountries.eu/"
                >
                  https://restcountries.eu/
                </a>
              </li>
              <li>
                <a
                  href="https://newsapi.org/"
                >
                  https://newsapi.org/
                </a>
              </li>
              <li>
                <a
                  href="https://covid.ourworldindata.org/data/owid-covid-data.json"
                >
                  https://covid.ourworldindata.org/data/owid-covid-data.json
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr />
  <div
    style={
      Object {
        "marginTop": "18px",
        "paddingBottom": "18px",
      }
    }
  >
    <h4>
      GitLab Statistics
    </h4>
    <b>
      Commits
    </b>
     
    0
     | 
    <b>
      Issues
    </b>
     
    0
     |
     
    <b>
      Unit Tests
    </b>
     
    64
    <br />
    <a
      href="https://gitlab.com/jrmoulckers/covid19db-net"
    >
      gitlab.com/jrmoulckers/covid19db-net
    </a>
    <br />
    <a
      href="https://documenter.getpostman.com/view/12799044/TVKJxuP4"
    >
      Postman Docs
    </a>
  </div>
  <hr />
  <div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <img
        className="card-img-top"
        src="/imgs/sshh12.jpg"
      />
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          Shrivu Shankar
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science Major from Houston, TX
          <hr />
          <b>
            Role
          </b>
           
          Full Stack Developer
          <hr />
          <b>
            Commits
          </b>
           
          0
           | 
          <b>
            Issues
          </b>
           
          0
           | 
          <b>
            Unit Tests
          </b>
           
          8
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <img
        className="card-img-top"
        src="/imgs/camd99.jpg"
      />
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          Cameron Doggett
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science Major from Katy, TX
          <hr />
          <b>
            Role
          </b>
           
          Back-end Developer
          <hr />
          <b>
            Commits
          </b>
           
          0
           | 
          <b>
            Issues
          </b>
           
          0
           | 
          <b>
            Unit Tests
          </b>
           
          34
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <img
        className="card-img-top"
        src="/imgs/YashKakodkar.jpg"
      />
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          Yash Kakodkar
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science Major from Katy, TX
          <hr />
          <b>
            Role
          </b>
           
          Full Stack Developer
          <hr />
          <b>
            Commits
          </b>
           
          0
           | 
          <b>
            Issues
          </b>
           
          0
           | 
          <b>
            Unit Tests
          </b>
           
          5
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <img
        className="card-img-top"
        src="/imgs/jrmoulckers.jpg"
      />
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          Jeffrey Moulckers
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science/Spanish Dual Major from Austin, TX
          <hr />
          <b>
            Role
          </b>
           
          Full Stack Developer
          <hr />
          <b>
            Commits
          </b>
           
          0
           | 
          <b>
            Issues
          </b>
           
          0
           | 
          <b>
            Unit Tests
          </b>
           
          0
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <img
        className="card-img-top"
        src="/imgs/vassi_gianitsos.jpg"
      />
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          Vassi Gianitsos
        </div>
        <p
          className="card-text"
        >
          Senior Computer Science Major from Flower Mound, TX
          <hr />
          <b>
            Role
          </b>
           
          Front-end Developer
          <hr />
          <b>
            Commits
          </b>
           
          0
           | 
          <b>
            Issues
          </b>
           
          0
           | 
          <b>
            Unit Tests
          </b>
           
          17
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render Pages Cases 1`] = `
<div
  className="App"
>
  <h1
    style={
      Object {
        "fontSize": "2em",
        "fontWeight": "800",
        "marginBottom": "20px",
        "marginTop": "20px",
      }
    }
  >
     
    Cases
     
  </h1>
  <button
    className="ant-btn"
    onClick={[Function]}
    type="button"
  >
    <span>
      Clear filters
    </span>
  </button>
  <div
    className="ant-table-wrapper"
    style={
      Object {
        "margin": "0 5vw",
        "outline": "1px solid lightgrey",
      }
    }
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-empty"
        >
          <div
            className="ant-table-container"
          >
            <div
              className="ant-table-content"
              onScroll={[Function]}
              style={Object {}}
            >
              <table
                style={
                  Object {
                    "tableLayout": "fixed",
                  }
                }
              >
                <colgroup />
                <thead
                  className="ant-table-thead"
                >
                  <tr>
                    <th
                      className="ant-table-cell"
                      colSpan={7}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <input
                        className="ant-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </th>
                  </tr>
                  <tr>
                    <th
                      className="ant-table-cell ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-column-sorters-with-tooltip"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="ant-table-column-sorters"
                        >
                          <span>
                            Country
                          </span>
                          <span
                            className="ant-table-column-sorter ant-table-column-sorter-full"
                          >
                            <span
                              className="ant-table-column-sorter-inner"
                            >
                              <span
                                aria-label="caret-up"
                                className="anticon anticon-caret-up ant-table-column-sorter-up"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="caret-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                  />
                                </svg>
                              </span>
                              <span
                                aria-label="caret-down"
                                className="anticon anticon-caret-down ant-table-column-sorter-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="caret-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Total Cases
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Total Deaths
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Total Recovered
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Total Active
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell"
                      colSpan={null}
                      rowSpan={null}
                      style={Object {}}
                    >
                      Explore Cases
                    </th>
                    <th
                      className="ant-table-cell"
                      colSpan={null}
                      rowSpan={null}
                      style={Object {}}
                    >
                      Explore Risks
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-placeholder"
                    style={
                      Object {
                        "display": null,
                      }
                    }
                  >
                    <td
                      className="ant-table-cell"
                      colSpan={7}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-empty ant-empty-normal"
                      >
                        <div
                          className="ant-empty-image"
                        >
                          <svg
                            className="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fillRule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                className="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                className="ant-empty-img-simple-g"
                                fillRule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  className="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          className="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render Pages Country 1`] = `
<div
  className="App"
>
  <h1
    style={
      Object {
        "fontSize": "2em",
        "fontWeight": "800",
        "margin": "20px 0",
      }
    }
  >
    Countries
     
  </h1>
  <input
    className="ant-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Search"
    style={
      Object {
        "margin": "2vh",
        "width": "50vw",
      }
    }
    type="text"
    value=""
  />
  <div
    className="country-grid-wrapper"
    style={
      Object {
        "margin": "0 2vw",
        "outline": "1px solid lightgrey",
        "paddingTop": 20,
      }
    }
  >
    <div
      className="ant-space ant-space-horizontal ant-space-align-center country-display-header"
    >
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div>
          Sort by:
        </div>
      </div>
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div
          className="ant-select ant-select-single ant-select-show-arrow"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "display": "inline-block",
              "verticalAlign": "top",
              "width": 200,
            }
          }
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="undefined_list_0"
                aria-autocomplete="list"
                aria-controls="undefined_list"
                aria-haspopup="listbox"
                aria-owns="undefined_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={true}
                role="combobox"
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              className="ant-select-selection-item"
              title="Country Name"
            >
              Country Name
            </span>
          </div>
          <span
            aria-hidden={true}
            className="ant-select-arrow"
            onMouseDown={[Function]}
            style={
              Object {
                "WebkitUserSelect": "none",
                "userSelect": "none",
              }
            }
            unselectable="on"
          >
            <span
              aria-label="down"
              className="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div
          className="ant-space ant-space-horizontal ant-space-align-center range-component"
        >
          <div
            className="ant-space-item"
            style={
              Object {
                "marginRight": 8,
              }
            }
          >
            <div>
              from
            </div>
          </div>
          <div
            className="ant-space-item"
            style={Object {}}
          >
            <span
              className="ant-input-group"
            >
              <input
                className="ant-input"
                maxLength={1}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "width": 40,
                  }
                }
                type="text"
                value="A"
              />
              <input
                className="ant-input ant-input-disabled"
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="to"
                style={
                  Object {
                    "borderLeft": 0,
                    "borderRight": 0,
                    "pointerEvents": "none",
                    "width": 40,
                  }
                }
                type="text"
                value=""
              />
              <input
                className="ant-input"
                maxLength={1}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "width": 40,
                  }
                }
                type="text"
                value="Z"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div
          className="ant-divider ant-divider-vertical"
          role="separator"
        />
      </div>
      <div
        className="ant-space-item"
        style={Object {}}
      >
        <div />
      </div>
    </div>
    <div
      className="site-card-wrapper"
      style={
        Object {
          "margin": "2vh 5vw",
        }
      }
    >
      <div
        className="ant-row ant-row-center"
        style={
          Object {
            "marginLeft": -8,
            "marginRight": -8,
          }
        }
      />
    </div>
    <div
      className="ant-space ant-space-horizontal ant-space-align-center country-display-header"
    >
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div>
          Sort by:
        </div>
      </div>
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div
          className="ant-select ant-select-single ant-select-show-arrow"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "display": "inline-block",
              "verticalAlign": "top",
              "width": 200,
            }
          }
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="undefined_list_0"
                aria-autocomplete="list"
                aria-controls="undefined_list"
                aria-haspopup="listbox"
                aria-owns="undefined_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={true}
                role="combobox"
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              className="ant-select-selection-item"
              title="Country Name"
            >
              Country Name
            </span>
          </div>
          <span
            aria-hidden={true}
            className="ant-select-arrow"
            onMouseDown={[Function]}
            style={
              Object {
                "WebkitUserSelect": "none",
                "userSelect": "none",
              }
            }
            unselectable="on"
          >
            <span
              aria-label="down"
              className="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div
          className="ant-space ant-space-horizontal ant-space-align-center range-component"
        >
          <div
            className="ant-space-item"
            style={
              Object {
                "marginRight": 8,
              }
            }
          >
            <div>
              from
            </div>
          </div>
          <div
            className="ant-space-item"
            style={Object {}}
          >
            <span
              className="ant-input-group"
            >
              <input
                className="ant-input"
                maxLength={1}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "width": 40,
                  }
                }
                type="text"
                value="A"
              />
              <input
                className="ant-input ant-input-disabled"
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="to"
                style={
                  Object {
                    "borderLeft": 0,
                    "borderRight": 0,
                    "pointerEvents": "none",
                    "width": 40,
                  }
                }
                type="text"
                value=""
              />
              <input
                className="ant-input"
                maxLength={1}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "width": 40,
                  }
                }
                type="text"
                value="Z"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="ant-space-item"
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <div
          className="ant-divider ant-divider-vertical"
          role="separator"
        />
      </div>
      <div
        className="ant-space-item"
        style={Object {}}
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render Pages Global News 1`] = `<div />`;

exports[`Render Pages Main 1`] = `<div />`;

exports[`Render Pages Risk 1`] = `
<div
  className="App"
>
  <h1
    style={
      Object {
        "fontSize": "2em",
        "fontWeight": "800",
        "marginBottom": "20px",
        "marginTop": "20px",
      }
    }
  >
    Risk Factors & Statistics
     
  </h1>
  <button
    className="ant-btn"
    onClick={[Function]}
    type="button"
  >
    <span>
      Clear filters
    </span>
  </button>
  <div
    className="ant-table-wrapper"
    style={
      Object {
        "margin": "0 5vw",
        "outline": "1px solid lightgrey",
      }
    }
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-empty"
        >
          <div
            className="ant-table-container"
          >
            <div
              className="ant-table-content"
              onScroll={[Function]}
              style={Object {}}
            >
              <table
                style={
                  Object {
                    "tableLayout": "fixed",
                  }
                }
              >
                <colgroup />
                <thead
                  className="ant-table-thead"
                >
                  <tr>
                    <th
                      className="ant-table-cell"
                      colSpan={7}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <input
                        className="ant-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </th>
                  </tr>
                  <tr>
                    <th
                      className="ant-table-cell ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-column-sorters-with-tooltip"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="ant-table-column-sorters"
                        >
                          <span>
                            Country
                          </span>
                          <span
                            className="ant-table-column-sorter ant-table-column-sorter-full"
                          >
                            <span
                              className="ant-table-column-sorter-inner"
                            >
                              <span
                                aria-label="caret-up"
                                className="anticon anticon-caret-up ant-table-column-sorter-up"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="caret-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                  />
                                </svg>
                              </span>
                              <span
                                aria-label="caret-down"
                                className="anticon anticon-caret-down ant-table-column-sorter-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="caret-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Life Expectancy
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                HDI
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Population Density
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-filter-column"
                      >
                        <span
                          className="ant-table-filter-column-title"
                        >
                          <div
                            className="ant-table-column-sorters-with-tooltip"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <div
                              className="ant-table-column-sorters"
                            >
                              <span>
                                Gini
                              </span>
                              <span
                                className="ant-table-column-sorter ant-table-column-sorter-full"
                              >
                                <span
                                  className="ant-table-column-sorter-inner"
                                >
                                  <span
                                    aria-label="caret-up"
                                    className="anticon anticon-caret-up ant-table-column-sorter-up"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label="caret-down"
                                    className="anticon anticon-caret-down ant-table-column-sorter-down"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="caret-down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="0 0 1024 1024"
                                      width="1em"
                                    >
                                      <path
                                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          className="ant-table-filter-trigger-container"
                          onClick={[Function]}
                        >
                          <span
                            className="ant-dropdown-trigger ant-table-filter-trigger"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="button"
                            tabIndex={-1}
                          >
                            <span
                              aria-label="filter"
                              className="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                className=""
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell"
                      colSpan={null}
                      rowSpan={null}
                      style={Object {}}
                    >
                      Explore Risks
                    </th>
                    <th
                      className="ant-table-cell"
                      colSpan={null}
                      rowSpan={null}
                      style={Object {}}
                    >
                      Explore Cases
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-placeholder"
                    style={
                      Object {
                        "display": null,
                      }
                    }
                  >
                    <td
                      className="ant-table-cell"
                      colSpan={7}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-empty ant-empty-normal"
                      >
                        <div
                          className="ant-empty-image"
                        >
                          <svg
                            className="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fillRule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                className="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                className="ant-empty-img-simple-g"
                                fillRule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  className="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          className="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
